--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -528,7 +528,7 @@
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
-  border-radius: 0;
+  border-radius: 10px !important;
   font-size: 14px;
 }
 .product-details button:hover,
@@ -648,4 +648,17 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+.conatinerSignUp {
+  height: 100vh !important;
+  margin: 0 !important;
+  background-image: url("../img/bg_3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.sub-div-containerSignup {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
 }
